[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Bewohner/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/player1.png" type="Texture" id=2]
[ext_resource path="res://assets/player2.png" type="Texture" id=3]
[ext_resource path="res://assets/player3.png" type="Texture" id=4]
[ext_resource path="res://assets/player4.png" type="Texture" id=5]
[ext_resource path="res://assets/player5.png" type="Texture" id=6]
[ext_resource path="res://assets/player6.png" type="Texture" id=7]
[ext_resource path="res://src/util/ContextBubble.tscn" type="PackedScene" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "defaultTrash",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "walkingTrash",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.42038, 15.9692 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3.06608, 41.8635 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 5.08612
height = 22.812

[node name="Player" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )
speed = Vector2( 50, 1000 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.543009, -16.0186 )
frames = SubResource( 1 )
animation = "walkingTrash"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.262466, -15.8949 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -26.603 )
current = true
limit_left = 0
limit_top = 0
limit_right = 512
limit_bottom = 300
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true

[node name="CollectTrash" type="Label" parent="."]
visible = false
margin_left = -27.0821
margin_top = -55.6145
margin_right = 120.918
margin_bottom = -41.6145
text = "Müll aufsammeln mit Y"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DropTrash" type="Label" parent="."]
visible = false
margin_left = -26.7572
margin_top = -55.2971
margin_right = 112.243
margin_bottom = -41.2971
text = "Müll ablegen mit X"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alanin" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 524288

[node name="CollisionAlanin" type="CollisionShape2D" parent="Alanin"]
position = Vector2( -0.471924, -16.3712 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="AlaninLabel" type="Label" parent="."]
visible = false
margin_left = -44.9472
margin_top = -52.3674
margin_right = 132.053
margin_bottom = -21.3674
rect_scale = Vector2( 0.5, 0.5 )
text = "Hey Armin!
Alles Gute zum Geburtstag!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0.176773, -16.1751 )
shape = SubResource( 4 )

[node name="Area2D" parent="." instance=ExtResource( 9 )]
position = Vector2( 0.481049, -5.27078 )
[connection signal="body_entered" from="Alanin" to="." method="_on_Alanin_body_entered"]
[connection signal="body_exited" from="Alanin" to="." method="_on_Alanin_body_exited"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_HitBox_area_exited"]
